<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Dashboard icons -->
    <string name="dashboard_button_sendtoapp">Share it</string>
    <string name="dashboard_button_login">Login</string>
    <string name="dashboard_button_settings">Settings</string>
    <string name="dashboard_button_about">About</string>
    <string name="dashboard_button_history">History</string>
    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_history_clear">Clear</string>
    <!-- Buttons -->
    <string name="button_login">Login</string>
    <!-- Preferences -->
    <string name="pref_category_history">History</string>
    <string name="pref_category_account">User account</string>
    <string name="pref_category_information">Information</string>
    <string name="pref_history_tracking_state">Save actions to your history</string>
    <string name="pref_history_tracking_state_summary_on">Actions are saved</string>
    <string name="pref_history_tracking_state_summary_off">Actions are not saved</string>
    <string name="pref_history_clear">Clear history</string>
    <string name="pref_login">Login</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_about">About</string>
    <!-- Activity titles -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Welcome to CopyIt</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_debug">Copy It debug screen</string>
    <string name="title_activity_test">Tests EN</string>
    <string name="title_activity_logged_out">Logged out</string>
    <string name="title_activity_history">History</string>
    <!-- Other stuff -->
    <string name="text_content">Content:</string>
    <string name="text_welcome_message">Thank you for installing CopyIt. To start using CopyIt please login.</string>
    <string name="text_logging_in">Logging in&#8230;</string>
    <string name="text_login_successful">Login successful!</string>
    <string name="text_logout_successful">Logout successful!</string>
    <string name="text_login_question">It looks like you\'re not logged in. Do you want to login in?</string>
    <string name="text_content_pushed">Pushed the following content: \'%1$s\'</string>
    <string name="text_content_pulled">Pulled the following content: \'%1$s\'</string>
    <string name="text_content_pulling">Pulling content&#8230;</string>
    <string name="text_content_pushing">Pushing content&#8230;</string>
    <string name="text_history_cleared">The history has been cleared</string>
    <string name="text_history_empty">No history has been recorded yet</string>
    <!-- Accessibility -->
    <string name="accessibility_widget_button_app">This button opens Copy It</string>
    <string name="accessibility_app_icon_big">Big CopyIt logo</string>
    <!-- Dialog -->
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_busy">Busy</string>
    <string name="dialog_title_select_send_app">Select app to share to&#8230;</string>
    <string name="dialog_button_okay">Okay</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <!-- Errors -->
    <string name="error_device_setup_failed">Could not setup the device: %1$s</string>
    <string name="error_general">An error occurred: %1$s</string>
    <!-- Widgets -->
    <string name="widget_title_general">CopyIt - General</string>
    <string name="widget_title_copyit">CopyIt - Copy It!</string>
    <string name="widget_title_pasteit">CopyIt - Paste It!</string>
    <string name="widget_title_copyit_pasteit">CopyIt - Copy/Paste It!</string>
    <!-- About information -->
    <string name="about_version">Version: %1$s</string>
    <string name="about_copyright">Made by MMS-Projects</string>
    <!-- Update screen -->
    <string name="update_available_text">There is a new Copy It version available. To download the latest version click the download button. Select the package with the following name:</string>
    <string name="update_button_download">Download update</string>
    <!-- Debug info -->
    <string name="debug_label_server_baseurl">Server baseurl</string>
    <string name="debug_label_jenkins_baseurl">Jenkins baseurl</string>
    <string name="debug_label_device_id">Device id</string>
    <string name="debug_label_device_password">Device password</string>
    <string name="debug_label_build_number">Build number</string>
    <string name="debug_label_screen_density">Screen density</string>
    <string name="debug_no_value">None</string>
    <string name="debug_unknown">Unknown</string>
    <string name="debug_available">Available</string>
    <string name="debug_not_available">Not available</string>
    <!-- History screen -->
    <string name="history_cab_put_in_clipboard">Put in clipboard</string>
    <string name="history_content_set">Set the clipboard content to \'%1$s\'</string>

    <!-- Login specific stuff -->
    <string name="login_button_browser_login">Login using our website</string>
    <string name="login_dialog_text_automatic_service_login">Would you like to automatically login using %1$s?</string>

    <!-- Main activity -->
    <!-- Used in the main activity menu as label to open the debug screen -->
    <string name="activity_main_menu_item_debug">Debug</string>

    <!-- General debugging stuff -->
    <!-- Used to copy some debug information to the clipboard -->
    <string name="debug_button_copy">Copy</string>
    <string name="debug_tokens_menu_load_test_tokens">Load test tokens</string>
    <string name="debug_tokens_toast_tokens_loaded">The test tokens have been stored</string>
    <!-- Used in the debug preference screen to enable a shortcut to the debug screen -->
    <string name="debug_prefs_enable_shortcut">Enable shortcut</string>
    <!-- Used in the debug preferences as a category for API related settings -->
    <string name="debug_prefs_category_api">API related settings</string>
    <!-- Used in the debug preferences to enable access to the development server -->
    <string name="debug_prefs_api_use_dev_server">Use development server</string>
    <!-- Used in the debug proferences to show that the development server is being used -->
    <string name="debug_prefs_api_use_dev_server_summary_on">Using the development server</string>
    <!-- Used in the debug proferences to show that the development server is not being used -->
    <string name="debug_prefs_api_use_dev_server_summary_off">Not using the development server</string>
    <!-- Used in almost all of the debugging activities. Its just a label to show that the particular activity shows the status of a piece of the app -->
    <string name="debug_screen_status_label">Status:</string>

    <!-- Google Cloud Messaging related stuff -->
    <!-- Used in the debug activity to open the GCM debugging activity. GCM is a term so that should not be translated -->
    <string name="gcm_debug_menu_item_title">GCM debugging</string>
    <!-- Used as the GCM debugging activity title. Google Cloud Messaging itself should not be translated -->
    <string name="gcm_debug_activity_title">Google Cloud Messaging debugging</string>
    <!-- Used in the GCM debugging activity to show if the Play Services are available -->
    <string name="gcm_debug_play_services_availability_label">Play Services availability</string>
    <!-- Used in the GCM debugging activity to show the sender id -->
    <string name="gcm_debug_sender_id_label">Sender ID</string>
    <!-- Used in the GCM debugging activity to show the registration id -->
    <string name="gcm_debug_registration_id_label">Registration ID</string>
    <!-- Used in a the GCM debugging activity toast to show that the app is registered to GCM -->
    <string name="gcm_debug_toast_registered">Registered with Google Cloud Messaging</string>
    <!-- Used in a the GCM debugging activity toast to show that the app could not register to GCM -->
    <string name="gcm_debug_toast_register_errored">Could not register with Google Cloud Messaging</string>

</resources>