<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/register_button"
        android:onClick="registerWithGcm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_screen_status_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcm_debug_play_services_availability_label"
                    android:layout_above="@+id/registration_id_text"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/play_service_available"
                    android:id="@+id/play_service_availability_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_unknown"
                    android:id="@+id/play_service_available"
                    android:layout_alignTop="@+id/scrollView"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcm_debug_sender_id_label"
                    android:id="@+id/sender_id_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sender_id_text"
                    android:text="@string/gcm_sender_id"
                    android:layout_below="@+id/sender_id_label"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/sender_id_copy" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_button_copy"
                    android:id="@+id/sender_id_copy"
                    android:ellipsize="end"
                    android:onClick="copyDebugInformation"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gcm_debug_registration_id_label"
                    android:id="@+id/registration_id_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_id_text"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/debug_unknown"
                    android:layout_below="@+id/registration_id_label"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/registration_id_copy" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/debug_button_copy"
                    android:id="@+id/registration_id_copy"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:onClick="copyDebugInformation" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/button"
        android:layout_below="@+id/scrollView"
        android:layout_toRightOf="@+id/register_button"
        android:onClick="resetGcm" />

</RelativeLayout>

